# sql-migration-env

./: .dockerignore  .gitignore  Dockerfile  LICENSE  PROJECT_COMPLETE.txt  PROJECT_DOCUMENTATION.txt  README.md  SUBMISSION.md  baselines.py  demo.py  generate_report.py  inference.py  openenv.yaml  openenv_client_example.py  pre_submit_check.py  pyproject.toml  requirements.txt  results_easy_004_missing_semicolon_20260331_235617.json  server.py  submission_guide.md  test_live.py  test_official_client.py  test_phase1.py  test_sqlite_behavior.py  test_submission.py  training_demo.py  validate-submission.sh  validate_submission.py  verify_grader.py
app/: __init__.py  database.py  environment.py  grader.py  main.py  models.py  scenarios.py
environment/: env.py  graders.py  models.py  tasks.py
server/: app.py
static/: index.html
tests/: test_endpoints.py  test_grader.py  test_impossible_tasks.py  test_scenarios.py
