[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sql-migration-env"
version = "0.1.0"
description = "OpenEnv environment for SQL migration safety training"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openenv-core",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools.packages.find]
where = ["."]